# condynsate

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: auto-assign.yml  draft-pdf.yml
docs/: .buildinfo  .buildinfo.bak  examples.html  genindex.html  index.html  installation.html  objects.inv  package.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/_sources/: examples.rst.txt  index.rst.txt  installation.rst.txt  package.rst.txt
envs/: condev.yaml
examples/: animator_example.ipynb  animator_example.py  cart_project.ipynb  keyboard_example.ipynb  keyboard_example.py  keyboard_test.py  project_example.py  project_example_1.ipynb  project_example_1.py  project_example_2.ipynb  project_example_2.py  project_example_3.ipynb  project_test.py  simulator_example.ipynb  simulator_example.py  visualizer_example.ipynb  visualizer_example.py
paper/: paper.bib  paper.md
projects/: PD_wheel.ipynb  project_00.py  wheel.ipynb  wheel.py
projects/01_wheel_series/: 01_PD_wheel.ipynb  02_PID_wheel.ipynb  wheel.py
projects/02_pendulum_cart_series/: 01_pendulum_cart_Ackermann.ipynb  02_pendulum_cart_LQR.ipynb  pendulum_cart.py
projects/03_control_moment_gyroscope_series/: 01_single_axis_cmg.ipynb  02_1DOF_opposed_cmgs.ipynb  02_double_axis_cmg.ipynb  02_opposed_cmgs.ipynb  02_opposed_single_axis_cmgs.ipynb  02_parallel_cmgs.ipynb  02_triple_cmgs.ipynb  dacmg.py  opposed_sacmg.py  parallel_sacmg.py  sacmg.py
projects/04_airplane_autopilot_series/: 01_FLC-IAS.ipynb  Untitled.ipynb  cessna_172_sim.py  flight_sim.py  pitch_ap.py  plane_parameters.py
projects/dual_axis_cmg/: 01_dual_axis_cmg.ipynb  01_single_axis_cmg.ipynb  02_dual_axis_cmg.ipynb  test.py
projects/wheel_series/: 01_PD_wheel.ipynb  (+1 more)
tests/: animator_test.py  project_test.py  simulator_test.py  visualizer_test.py
tutorials/: 0_Introduction.ipynb  1_External_Forces_and_Torques.ipynb  2_Joint_Torques.ipynb  3_Link_Forces.ipynb  4_The_Animator.ipynb
(+143 files in other folders)
