[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"


[project]
name = "condynsate"
dynamic = ["version"]
description = "Simulates and visualizes articulated systems in real time"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = [
    "control and dynamics",
    "visualization",
    "simulation",
    "education",
    "python",
]
authors = [{ name = "Grayson Schaer", email = "gschaer2@illinois.edu" }]
maintainers = [{ name = "Grayson Schaer", email = "gschaer2@illinois.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
   "ipython",
   "matplotlib",
   "notebook",
   "numpy",
   "opencv-python",
   "pillow",
   "pybullet",
   "pyngrok",
   "pynput",
   "pyzmq",
   "tornado",
   "u-msgpack-python",
]

[project.optional-dependencies]
dev = [
   "spyder",
   "notebook",
   "twine",
   "build",
   "sphinx",
   "sphinx-collections",
   "numpydoc",
   "autoclasstoc",
   "sphinx-rtd-theme",
   "nbsphinx",
]

[project.urls]
"Homepage" = "https://github.com/GrayKS3248/condynsate"
"Bug Reports" = "https://github.com/GrayKS3248/condynsate/issues"
"Source" = "https://github.com/GrayKS3248/condynsate"


[tool.setuptools.package-data]
"*" = ["*.stl", 
       "*.obj", 
       "*.png", 
       "*.urdf", 
       "condynsate/visualizer/meshcat/src/meshcat/viewer/dist/*"]


[tool.setuptools.dynamic]
version = {attr = "condynsate.__version__"}


[tool.setuptools.packages.find]
where = ["src"]
